[package]
name = "ethane-abi"
version = "1.0.1"
authors = ["Mark Melczer <melczer7@gmail.com>", "PumpkinSeed <ferenc@ngen.ai>"]
edition = "2018"
description = "An alternative web3 abi parser library which aims the simplicity"
repository = "https://github.com/zgendao/ethane"
license = "MIT"
keywords = ["web3", "ethereum", "jsonrpc", "rpc", "abi"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
readme = "../README.md"

[dependencies]
ethane-types = { path = "../ethane-types" }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
hex-literal = "0.3"
