[package]
name = "ethane-wasm"
version = "0.1.0"
authors = ["ZGEN <info@zgen.hu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ethane = { path = "../ethane" }
getrandom = { version = "0.2.2", features = ["js"] }
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.23"
js-sys = { version = "0.3.45" }
