[package]
name = "ethane"
version = "1.0.0"
authors = ["thojest <thojest@gmail.com>", "PumpkinSeed <ferenc@ngen.ai>"]
edition = "2018"
description = "An alternative web3 implementation with the aim of being slim and simple"
repository = "https://github.com/zgendao/ethane"
license = "MIT"
keywords = ["web3", "ethereum", "jsonrpc", "rpc", "simple"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
readme = "../README.md"

[dependencies]
ethane-abi = { path = "../ethane-abi", version = "1.0.0" }
ethereum-types = "0.11"
funty = "~1.1.0"
http = "0.2"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tungstenite = {version = "0.13", features = ["rustls-tls"], default-features = false}
hex = "0.4"
ureq = "2"

[dev-dependencies]
test-helper = { path = "./test-helper"}
