[package]
name = "test-helper"
version = "0.1.0"
authors = ["thojest <thojest@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ethane = { path = "../", features = ["blocking"] }
serde = "1"
serde_json = "1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.8"
regex = "1"
